# apply-refact

./: .gitignore  .travis.yml  CHANGELOG  LICENSE  README.md  apply-refact.cabal  cabal.project  hie.yaml  hlint-refactor.cabal  stack.yaml
.github/workflows/: ci.yml  haskell-ci.yml  hlint.yml
src/: Main.hs
src/Refact/: Apply.hs  Compat.hs  Fixity.hs  Internal.hs  Options.hs  Perform.hs  Run.hs  Utils.hs
tests/: Roundtrip.hs  Test.hs
tests/examples/: AndList.hs  AndList.hs.expected  AndList.hs.refact  ArithSeq.hs  ArithSeq.hs.expected  ArithSeq.hs.refact  Async.hs  Async.hs.expected  Async.hs.refact  Backquotes.hs  Backquotes.hs.expected  Backquotes.hs.refact  Bracket0.hs  Bracket0.hs.expected  Bracket0.hs.refact  Bracket1.hs.expected  Bracket10.hs  Bracket10.hs.expected  Bracket10.hs.refact  Bracket11.hs  Bracket11.hs.expected  Bracket11.hs.refact  Bracket12.hs  Bracket12.hs.expected  Bracket12.hs.refact  Bracket13.hs  Bracket13.hs.expected  Bracket13.hs.refact  Bracket14.hs  Bracket14.hs.expected  Bracket14.hs.refact  Bracket15.hs  Bracket15.hs.expected  Bracket15.hs.refact  Bracket16.hs  Bracket16.hs.refact  Bracket17.hs.expected  Bracket18.hs.expected  Bracket18.hs.refact  Bracket19.hs  (+1052 more)
